# highway-capacity-manual-mcp

./: .env  .env.example  .gitignore  LICENSE  README.md  claude_desktop_config.json  function_registry.yaml  hcm_chunks.pkl  hcm_metadata.pkl  main.py  mcp_server.py  mcp_server_fastapi.py  pyproject.toml  render.yaml  requirements.txt  store_pdf.py
.github/workflows/: ci.yaml  release.yaml
data/hcm_files/: README.md
example_prompts/: chap15_ex1.txt  chap15_ex3.txt
hcm_mcp_server/core/: __init__.py  dependencies.py  endpoints.py  models.py  registry.py  validation.py
hcm_mcp_server/example_prompts/: case_study1.txt  chap15_ex1.json  chap15_ex1.txt  chap15_ex2.json  chap15_ex2.txt  chap15_ex3.json  chap15_ex3.txt  chap15_ex4.json  chap15_ex4.txt
hcm_mcp_server/functions/: chapter15.py  research.py
hcm_mcp_server/scripts/: import_hcm_docs.py  setup_database.py  validate_registry.py
tests/: test_validation_integration.py
